hejmark/adapters/_gen/HimarkParser.py
# Generated from HimarkParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class HimarkParser ( Parser ):

    grammarFileName = "HimarkParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'uni'", "':='", "'=>'", "'='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'['", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'}'", "','", "'!'", "'&'", 
                     "'.'", "<INVALID>", "<INVALID>", "<INVALID>", "']'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'{{'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'}}'" ]

    symbolicNames = [ "<INVALID>", "UNI", "WALRUS", "ARROW", "EQ", "RANGE", 
                      "USCORE", "CARET", "REF", "IDENT", "NUM", "LBRACE", 
                      "LBRACK", "TMPL_OPEN", "COMMENT", "NL", "WS", "RBRACE", 
                      "COMMA", "BANG", "AMP", "DOT", "ESC", "B_WS", "CHAR", 
                      "RBRACK", "A_WS", "ARG", "TMPL_CLOSE", "MOUST_OPEN", 
                      "TMPL_ESC", "TMPL_LBRACE", "TMPL_TEXT", "MOUST_CLOSE", 
                      "CAPTURE", "I_WS" ]

    RULE_script = 0
    RULE_line = 1
    RULE_declaration = 2
    RULE_param = 3
    RULE_statement = 4
    RULE_step = 5
    RULE_expr = 6
    RULE_unit = 7
    RULE_base = 8
    RULE_exponent = 9
    RULE_pipeline = 10
    RULE_pipeItem = 11
    RULE_universe = 12
    RULE_member = 13
    RULE_segment = 14
    RULE_face = 15
    RULE_template = 16
    RULE_part = 17
    RULE_interp = 18

    ruleNames =  [ "script", "line", "declaration", "param", "statement", 
                   "step", "expr", "unit", "base", "exponent", "pipeline", 
                   "pipeItem", "universe", "member", "segment", "face", 
                   "template", "part", "interp" ]

    EOF = Token.EOF
    UNI=1
    WALRUS=2
    ARROW=3
    EQ=4
    RANGE=5
    USCORE=6
    CARET=7
    REF=8
    IDENT=9
    NUM=10
    LBRACE=11
    LBRACK=12
    TMPL_OPEN=13
    COMMENT=14
    NL=15
    WS=16
    RBRACE=17
    COMMA=18
    BANG=19
    AMP=20
    DOT=21
    ESC=22
    B_WS=23
    CHAR=24
    RBRACK=25
    A_WS=26
    ARG=27
    TMPL_CLOSE=28
    MOUST_OPEN=29
    TMPL_ESC=30
    TMPL_LBRACE=31
    TMPL_TEXT=32
    MOUST_CLOSE=33
    CAPTURE=34
    I_WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(HimarkParser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(HimarkParser.NL)
            else:
                return self.getToken(HimarkParser.NL, i)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HimarkParser.LineContext)
            else:
                return self.getTypedRuleContext(HimarkParser.LineContext,i)


        def getRuleIndex(self):
            return HimarkParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)




    def script(self):

        localctx = HimarkParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 38
                self.match(HimarkParser.NL)
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 11074) != 0):
                self.state = 44
                self.line()
                self.state = 53
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 46 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 45
                            self.match(HimarkParser.NL)
                            self.state = 48 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==15):
                                break

                        self.state = 50
                        self.line() 
                    self.state = 55
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==15:
                    self.state = 56
                    self.match(HimarkParser.NL)
                    self.state = 61
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 64
            self.match(HimarkParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(HimarkParser.DeclarationContext,0)


        def statement(self):
            return self.getTypedRuleContext(HimarkParser.StatementContext,0)


        def getRuleIndex(self):
            return HimarkParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = HimarkParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.declaration()
                pass
            elif token in [6, 8, 11, 13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HimarkParser.RULE_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DefDeclContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HimarkParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENT(self):
            return self.getToken(HimarkParser.IDENT, 0)
        def WALRUS(self):
            return self.getToken(HimarkParser.WALRUS, 0)
        def expr(self):
            return self.getTypedRuleContext(HimarkParser.ExprContext,0)

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HimarkParser.ParamContext)
            else:
                return self.getTypedRuleContext(HimarkParser.ParamContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefDecl" ):
                listener.enterDefDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefDecl" ):
                listener.exitDefDecl(self)


    class UniDeclContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HimarkParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def UNI(self):
            return self.getToken(HimarkParser.UNI, 0)
        def IDENT(self):
            return self.getToken(HimarkParser.IDENT, 0)
        def EQ(self):
            return self.getToken(HimarkParser.EQ, 0)
        def expr(self):
            return self.getTypedRuleContext(HimarkParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUniDecl" ):
                listener.enterUniDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUniDecl" ):
                listener.exitUniDecl(self)



    def declaration(self):

        localctx = HimarkParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = HimarkParser.UniDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.match(HimarkParser.UNI)
                self.state = 71
                self.match(HimarkParser.IDENT)
                self.state = 72
                self.match(HimarkParser.EQ)
                self.state = 73
                self.expr()
                pass
            elif token in [9]:
                localctx = HimarkParser.DefDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(HimarkParser.IDENT)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==9:
                    self.state = 75
                    self.param()
                    self.state = 80
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 81
                self.match(HimarkParser.WALRUS)
                self.state = 82
                self.expr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(HimarkParser.IDENT)
            else:
                return self.getToken(HimarkParser.IDENT, i)

        def RANGE(self):
            return self.getToken(HimarkParser.RANGE, 0)

        def getRuleIndex(self):
            return HimarkParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = HimarkParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(HimarkParser.IDENT)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 86
                self.match(HimarkParser.RANGE)
                self.state = 87
                self.match(HimarkParser.IDENT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def step(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HimarkParser.StepContext)
            else:
                return self.getTypedRuleContext(HimarkParser.StepContext,i)


        def ARROW(self, i:int=None):
            if i is None:
                return self.getTokens(HimarkParser.ARROW)
            else:
                return self.getToken(HimarkParser.ARROW, i)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(HimarkParser.NL)
            else:
                return self.getToken(HimarkParser.NL, i)

        def getRuleIndex(self):
            return HimarkParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = HimarkParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.step()
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==15:
                        self.state = 91
                        self.match(HimarkParser.NL)
                        self.state = 96
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 97
                    self.match(HimarkParser.ARROW)
                    self.state = 98
                    self.step() 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HimarkParser.RULE_step

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TemplateStepContext(StepContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HimarkParser.StepContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def template(self):
            return self.getTypedRuleContext(HimarkParser.TemplateContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplateStep" ):
                listener.enterTemplateStep(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplateStep" ):
                listener.exitTemplateStep(self)


    class QueryStepContext(StepContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HimarkParser.StepContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(HimarkParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueryStep" ):
                listener.enterQueryStep(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueryStep" ):
                listener.exitQueryStep(self)



    def step(self):

        localctx = HimarkParser.StepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_step)
        try:
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6, 8, 11]:
                localctx = HimarkParser.QueryStepContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.expr()
                pass
            elif token in [13]:
                localctx = HimarkParser.TemplateStepContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.template()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HimarkParser.UnitContext)
            else:
                return self.getTypedRuleContext(HimarkParser.UnitContext,i)


        def getRuleIndex(self):
            return HimarkParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = HimarkParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 108
                self.unit()
                self.state = 111 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2368) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def base(self):
            return self.getTypedRuleContext(HimarkParser.BaseContext,0)


        def CARET(self):
            return self.getToken(HimarkParser.CARET, 0)

        def exponent(self):
            return self.getTypedRuleContext(HimarkParser.ExponentContext,0)


        def pipeline(self):
            return self.getTypedRuleContext(HimarkParser.PipelineContext,0)


        def getRuleIndex(self):
            return HimarkParser.RULE_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnit" ):
                listener.enterUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnit" ):
                listener.exitUnit(self)




    def unit(self):

        localctx = HimarkParser.UnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_unit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.base()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 114
                self.match(HimarkParser.CARET)
                self.state = 115
                self.exponent()


            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 118
                self.pipeline()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HimarkParser.RULE_base

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class UniverseBaseContext(BaseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HimarkParser.BaseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def universe(self):
            return self.getTypedRuleContext(HimarkParser.UniverseContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUniverseBase" ):
                listener.enterUniverseBase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUniverseBase" ):
                listener.exitUniverseBase(self)


    class OperandBaseContext(BaseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HimarkParser.BaseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def USCORE(self):
            return self.getToken(HimarkParser.USCORE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperandBase" ):
                listener.enterOperandBase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperandBase" ):
                listener.exitOperandBase(self)


    class ReferenceBaseContext(BaseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HimarkParser.BaseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def REF(self):
            return self.getToken(HimarkParser.REF, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReferenceBase" ):
                listener.enterReferenceBase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReferenceBase" ):
                listener.exitReferenceBase(self)



    def base(self):

        localctx = HimarkParser.BaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_base)
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                localctx = HimarkParser.UniverseBaseContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.universe()
                pass
            elif token in [8]:
                localctx = HimarkParser.ReferenceBaseContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(HimarkParser.REF)
                pass
            elif token in [6]:
                localctx = HimarkParser.OperandBaseContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 123
                self.match(HimarkParser.USCORE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExponentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(HimarkParser.NUM, 0)

        def IDENT(self):
            return self.getToken(HimarkParser.IDENT, 0)

        def face(self):
            return self.getTypedRuleContext(HimarkParser.FaceContext,0)


        def universe(self):
            return self.getTypedRuleContext(HimarkParser.UniverseContext,0)


        def getRuleIndex(self):
            return HimarkParser.RULE_exponent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExponent" ):
                listener.enterExponent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExponent" ):
                listener.exitExponent(self)




    def exponent(self):

        localctx = HimarkParser.ExponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_exponent)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(HimarkParser.NUM)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(HimarkParser.IDENT)
                pass
            elif token in [21, 22, 24]:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.face()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.universe()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PipelineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(HimarkParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(HimarkParser.RBRACK, 0)

        def pipeItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HimarkParser.PipeItemContext)
            else:
                return self.getTypedRuleContext(HimarkParser.PipeItemContext,i)


        def getRuleIndex(self):
            return HimarkParser.RULE_pipeline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPipeline" ):
                listener.enterPipeline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPipeline" ):
                listener.exitPipeline(self)




    def pipeline(self):

        localctx = HimarkParser.PipelineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_pipeline)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(HimarkParser.LBRACK)
            self.state = 134 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 133
                self.pipeItem()
                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==27):
                    break

            self.state = 138
            self.match(HimarkParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PipeItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARG(self, i:int=None):
            if i is None:
                return self.getTokens(HimarkParser.ARG)
            else:
                return self.getToken(HimarkParser.ARG, i)

        def RANGE(self):
            return self.getToken(HimarkParser.RANGE, 0)

        def getRuleIndex(self):
            return HimarkParser.RULE_pipeItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPipeItem" ):
                listener.enterPipeItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPipeItem" ):
                listener.exitPipeItem(self)




    def pipeItem(self):

        localctx = HimarkParser.PipeItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_pipeItem)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(HimarkParser.ARG)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 141
                self.match(HimarkParser.RANGE)
                self.state = 142
                self.match(HimarkParser.ARG)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UniverseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(HimarkParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(HimarkParser.RBRACE, 0)

        def member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HimarkParser.MemberContext)
            else:
                return self.getTypedRuleContext(HimarkParser.MemberContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(HimarkParser.COMMA)
            else:
                return self.getToken(HimarkParser.COMMA, i)

        def getRuleIndex(self):
            return HimarkParser.RULE_universe

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUniverse" ):
                listener.enterUniverse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUniverse" ):
                listener.exitUniverse(self)




    def universe(self):

        localctx = HimarkParser.UniverseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_universe)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(HimarkParser.LBRACE)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 24643904) != 0):
                self.state = 146
                self.member()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==18:
                    self.state = 147
                    self.match(HimarkParser.COMMA)
                    self.state = 148
                    self.member()
                    self.state = 153
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 156
            self.match(HimarkParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'
